--- a/src/components/DefaultTemplate/ProductCard/style/base.css
+++ b/src/components/DefaultTemplate/ProductCard/style/base.css
@@ -2,7 +2,6 @@
   inline-size: 100%;
   block-size: auto;
 
-  margin-block-end: 12px;
   position: relative;
 }
 
@@ -14,6 +13,14 @@
   border-radius: 24px;
 }
 
-.ProductCard .Header2 {
-  font-size: 14px;
+.ProductCard .ProductPrice {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 600;
+}
+.ProductCard .ProductTitle {
+  font-size: 16px;
+  line-height: 20px;
+
+  font-weight: 500;
 }
