--- a/src/components/DefaultTemplate/ProductView/style/base.css
+++ b/src/components/DefaultTemplate/ProductView/style/base.css
@@ -31,3 +31,15 @@
 
   object-fit: cover;
 }
+
+.ProductInfo {
+  padding-inline: 20px;
+  padding-block-start: 20px;
+}
+.ProductInfo .PriceTag {
+  font-size: 18px;
+  background-color: black;
+  color: rgba(255, 255, 255, 0.799);
+  padding-inline: 20px;
+  border-radius: 20px;
+}
