--- a/src/components/DefaultTemplate/ProductView/style/base.css
+++ b/src/components/DefaultTemplate/ProductView/style/base.css
@@ -36,6 +36,7 @@
 
   object-fit: cover;
 }
+
 .ProductInfoContainer {
   block-size: 100vh;
   background-color: white;
@@ -45,6 +46,28 @@
   padding-inline: 20px;
   padding-block-start: 20px;
 }
+
+.ProductInfoContainer .ProductInfo .ImagesTabsItem {
+  inline-size: 56px;
+  block-size: 56px;
+  border-radius: 12px;
+
+  box-sizing: content-box;
+
+  overflow: hidden;
+}
+
+.ProductInfoContainer .ProductInfo .ImagesTabsItem.selected {
+  border: 4px solid black;
+}
+
+.ProductInfoContainer .ProductInfo .ImagesTabsItemImage {
+  inline-size: 100%;
+  block-size: 100%;
+
+  object-fit: cover;
+}
+
 .ProductInfo .PriceTag {
   font-size: 18px;
   background-color: black;
