feat: implement ImageLoader component for improved image loading experience in ProductCard and ProductView

--- a/src/components/DefaultTemplate/ProductCard/style/base.css
+++ b/src/components/DefaultTemplate/ProductCard/style/base.css
@@ -6,10 +6,8 @@
 }
 
 .ProductCard .ProductImage {
+  inline-size: 100%;
   block-size: auto;
-
-  position: static !important;
-
   border-radius: 24px;
 }
 
