--- a/src/components/DefaultTemplate/AllProductsView/style/base.css
+++ b/src/components/DefaultTemplate/AllProductsView/style/base.css
@@ -4,17 +4,19 @@
 }
 
 .AllProducts .CollectionItem {
-  inline-size: 160px;
-  block-size: 40px;
+  inline-size: 100px;
+  block-size: 100px;
 
   border-radius: 12px;
   border: 1px solid black;
 }
 
 .AllProducts .CollectionItem .CollectionItemImage {
-  inline-size: 60px;
-  block-size: 100%;
-  color: red;
+  inline-size: 100%;
+  block-size: 60px;
+}
+.AllProducts .CollectionItem .CollectionItemImage img {
+  object-fit: contain;
 }
 .AllProducts .AllProductsHeader {
   font-size: 36px;
