--- a/src/components/DefaultTemplate/ProductView/style/base.css
+++ b/src/components/DefaultTemplate/ProductView/style/base.css
@@ -41,13 +41,13 @@
   block-size: 80vh;
   background-color: white;
 }
-.ProductInfo {
+.ProductView .ProductInfo {
   block-size: 100%;
   padding-inline: 20px;
   padding-block-start: 20px;
 }
 
-.ProductInfoContainer .ProductInfo .ImagesTabsItem {
+.ProductView .ProductInfoContainer .ProductInfo .ImagesTabsItem {
   inline-size: 56px;
   block-size: 56px;
   border-radius: 12px;
@@ -57,18 +57,18 @@
   overflow: hidden;
 }
 
-.ProductInfoContainer .ProductInfo .ImagesTabsItem.selected {
+.ProductView .ProductInfoContainer .ProductInfo .ImagesTabsItem.selected {
   border: 4px solid black;
 }
 
-.ProductInfoContainer .ProductInfo .ImagesTabsItemImage {
+.ProductView .ProductInfoContainer .ProductInfo .ImagesTabsItemImage {
   inline-size: 100%;
   block-size: 100%;
 
   object-fit: cover;
 }
 
-.ProductInfo .PriceTag {
+.ProductView .ProductInfo .PriceTag {
   font-size: 18px;
   background-color: black;
   color: rgba(255, 255, 255, 0.799);
@@ -76,23 +76,23 @@
   border-radius: 20px;
 }
 
-.ProductInfo .ProductDescription p {
+.ProductView .ProductInfo .ProductDescription p {
   font-size: 18px;
   line-height: 26px;
   color: rgb(70, 72, 73);
 }
-.ProductInfo .ProductDescription ul {
+.ProductView .ProductInfo .ProductDescription ul {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.ProductInfo .ProductDescription ul li {
+.ProductView .ProductInfo .ProductDescription ul li {
   font-size: 16px;
   color: rgb(32, 33, 35);
   border-block-end: 1px solid rgb(143, 143, 150);
 }
 
-.ProductInfo .ProductDescription p > span {
+.ProductView .ProductInfo .ProductDescription p > span {
   background-color: rgb(222, 221, 232);
   padding-inline: 12px;
   padding-block: 2px;
