--- a/src/components/DefaultTemplate/MainFooter/base.css
+++ b/src/components/DefaultTemplate/MainFooter/base.css
@@ -10,10 +10,10 @@
 
   background-color: white;
 
-  box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.249);
-  border-block-start: 1px solid rgba(0, 0, 0, 0.393);
+  box-shadow: 0px -1px 6px rgba(0, 0, 0, 0.158);
+  border-block-start: 1px solid rgba(0, 0, 0, 0.21);
 }
-.List {
+.MainFooter .List {
   inline-size: 100%;
   block-size: 100%;
 }
