feat: update styles for CategoriesView and CategoryCard components, add new CSS variables, and enhance layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --base-color: #8f5fef;
+  --bg-primary: var(--base-color);
 }
 
 @theme inline {
