--- a/src/components/DefaultTemplate/MainHeader/base.css
+++ b/src/components/DefaultTemplate/MainHeader/base.css
@@ -34,8 +34,20 @@
   line-height: 24px;
 }
 .MainHeader.mini .Header {
+  display: flex;
+  align-items: center;
   font-size: 14px;
+  gap: 4px;
 }
+
+.MainHeader .Header .Icon {
+  padding: 4px;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #8f5fef;
+  color: #efe9fb;
+}
+
 .MainHeader .SubHeader {
   font-size: 14px;
   line-height: 18px;
