--- a/src/components/DefaultTemplate/CollectionTabs/style/base.css
+++ b/src/components/DefaultTemplate/CollectionTabs/style/base.css
@@ -81,6 +81,7 @@
   inline-size: 100%;
   block-size: 60px;
   padding-block: 8px;
+  color: #8f5fef;
 }
 .CollectionTabs.mini .CollectionTabsListItem .CollectionTabsListItemInitIcon {
   inline-size: 100%;
