--- a/src/components/DefaultTemplate/ProductCard/style/base.css
+++ b/src/components/DefaultTemplate/ProductCard/style/base.css
@@ -12,9 +12,14 @@
 }
 
 .ProductCard .ProductPrice {
-  font-size: 24px;
-  line-height: 30px;
+  padding-inline: 12px;
+  font-size: 20px;
+  line-height: 24px;
   font-weight: 600;
+
+  background-color: #d8caf0;
+  border-radius: 8px;
+  color: #3a3544;
 }
 .ProductCard .ProductTitle {
   font-size: 16px;
