--- a/src/components/DefaultTemplate/AllProductsView/style/base.css
+++ b/src/components/DefaultTemplate/AllProductsView/style/base.css
@@ -16,17 +16,24 @@
 
 .AllProducts .AllProductsHeader {
   inline-size: 100%;
+
+  margin-block-start: 4px;
+
   display: flex;
   flex-direction: column;
-  font-size: 28px;
-  line-height: 32px;
+
+  font-size: 22px;
+  line-height: 26px;
   text-align: start;
 }
 .AllProducts .AllProductsHeader .SubSpan {
   display: flex;
   align-items: center;
+  gap: 8px;
 }
-
+.AllProducts .AllProductsHeader .SubSpan .SubSpanText {
+  text-wrap: nowrap;
+}
 .AllProducts .AllProductsHeader .HeaderSeparator {
   display: inline-block;
 }
