--- a/src/components/DefaultTemplate/ProductView/style/base.css
+++ b/src/components/DefaultTemplate/ProductView/style/base.css
@@ -13,20 +13,21 @@
   position: relative;
 }
 
-.BackIconLink {
-  padding: 4px;
+.ProductView .BackIconLink {
+  padding: 8px;
   position: absolute;
   top: 20px;
   left: 20px;
-  font-size: 32px;
+  font-size: 24px;
   z-index: 2;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  background-color: white;
-  border-radius: 12px;
+  background-color: #c4a7ff;
+  color: #32146e;
+  border-radius: 8px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.395);
 }
@@ -55,10 +56,14 @@
   box-sizing: content-box;
 
   overflow: hidden;
+  opacity: 0.5;
 }
 
 .ProductView .ProductInfoContainer .ProductInfo .ImagesTabsItem.selected {
-  border: 4px solid black;
+  inline-size: 92px;
+  border: 2px solid #7648d1;
+  box-shadow: 0px 3px 6px #7648d1;
+  opacity: 1;
 }
 
 .ProductView .ProductInfoContainer .ProductInfo .ImagesTabsItemImage {
@@ -67,11 +72,14 @@
 
   object-fit: cover;
 }
-
+.ProductView .ProductInfo .TagName {
+  color: #6b637b;
+  font-size: 30px;
+}
 .ProductView .ProductInfo .PriceTag {
   font-size: 18px;
-  background-color: black;
-  color: rgba(255, 255, 255, 0.799);
+  background-color: #7a4ad9;
+  color: #e8e5ef;
   padding-inline: 20px;
   border-radius: 20px;
 }
@@ -79,7 +87,8 @@
 .ProductView .ProductInfo .ProductDescription p {
   font-size: 18px;
   line-height: 26px;
-  color: rgb(70, 72, 73);
+  font-weight: 500px;
+  color: #574a70;
 }
 .ProductView .ProductInfo .ProductDescription ul {
   display: flex;
@@ -88,7 +97,8 @@
 }
 .ProductView .ProductInfo .ProductDescription ul li {
   font-size: 16px;
-  color: rgb(32, 33, 35);
+  color: #5b2eb5;
+  font-weight: 500;
   border-block-end: 1px solid rgb(143, 143, 150);
 }
 
@@ -97,23 +107,24 @@
   padding-inline: 12px;
   padding-block: 2px;
   border-radius: 12px;
-
+  margin-inline-end: 4px;
   font-weight: 500;
   font-size: 14px;
+  color: #5e33b4;
 }
 
 .ProductView .ProductInfo .WhatsappAnchor {
   inline-size: 260px;
   block-size: 56px;
 
-  margin-block-start: 12px;
+  margin-block-start: 40px;
 
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
 
-  background-color: #2cd46b;
+  background-color: #4beb88;
   border-radius: 12px;
 
   align-self: center;
@@ -121,8 +132,9 @@
   font-size: 18px;
   font-weight: 500;
 
-  color: #062a25;
+  color: #3e3b41;
 }
 .ProductView .ProductInfo .WhatsappAnchor .Icon {
   font-size: 32px;
+  color: #185c32;
 }
