feat: add Text component and update text-related types; refactor Flex and H components for improved styling

--- a/src/components/DefaultTemplate/ProductView/style/base.css
+++ b/src/components/DefaultTemplate/ProductView/style/base.css
@@ -133,6 +133,7 @@
   font-weight: 500;
 
   color: #3e3b41;
+  box-shadow: 0px 3px 6px #114f296a;
 }
 .ProductView .ProductInfo .WhatsappAnchor .Icon {
   font-size: 32px;
