--- a/src/lib/css/text-utility.css
+++ b/src/lib/css/text-utility.css
@@ -1,94 +1,290 @@
 @layer base {
   :root {
-    --h-base-font-size: 1rem;
-    --h-base-line-height: 1.5rem;
-
-    /* Multipliers */
-    --h-h1-multiplier: 1.5;
-    --h-h2-multiplier: 1.4;
-    --h-h3-multiplier: 1.3;
-    --h-h4-multiplier: 1.2;
-    --h-h5-multiplier: 0.9;
-    --h-h6-multiplier: 1;
+    --text-base-font-size: 1rem;
+    --text-base-line-height: 1.5rem;
+    --text-base-font-weight: 400;
 
     /*h1*/
-    --h-h1-color: rgb(58, 58, 70);
-    --h-h1-font-size: calc(var(--h-base-font-size) * var(--h-h1-multiplier));
-    --h-h1-font-weight: 700;
-    --h-h1-line-height: calc(
-      var(--h-base-line-height) * var(--h-h1-multiplier)
-    );
+    --h1-multiplier: 1.5;
+    --h1-color: rgb(58, 58, 70);
+    --h1-font-size: calc(var(--text-base-font-size) * var(--h1-multiplier));
+    --h1-font-weight: 700;
+    --h1-line-height: calc(var(--text-base-line-height) * var(--h1-multiplier));
     /*h2*/
-    --h-h2-color: rgb(58, 58, 70);
-    --h-h2-font-size: calc(var(--h-base-font-size) * var(--h-h2-multiplier));
-    --h-h2-font-weight: 600;
-    --h-h2-line-height: calc(
-      var(--h-base-line-height) * var(--h-h2-multiplier)
-    );
+    --h2-multiplier: 1.4;
+    --h2-color: rgb(58, 58, 70);
+    --h2-font-size: calc(var(--text-base-font-size) * var(--h2-multiplier));
+    --h2-font-weight: 600;
+    --h2-line-height: calc(var(--text-base-line-height) * var(--h2-multiplier));
     /*h3*/
-    --h-h3-color: rgb(58, 58, 70);
-    --h-h3-font-size: calc(var(--h-base-font-size) * var(--h-h3-multiplier));
-    --h-h3-font-weight: 500;
-    --h-h3-line-height: calc(
-      var(--h-base-line-height) * var(--h-h3-multiplier)
-    );
+    --h3-multiplier: 1.3;
+    --h3-color: rgb(58, 58, 70);
+    --h3-font-size: calc(var(--text-base-font-size) * var(--h3-multiplier));
+    --h3-font-weight: 500;
+    --h3-line-height: calc(var(--text-base-line-height) * var(--h3-multiplier));
     /*h4*/
-    --h-h4-color: rgb(58, 58, 70);
-    --h-h4-font-size: calc(var(--h-base-font-size) * var(--h-h4-multiplier));
-    --h-h4-font-weight: 500;
-    --h-h4-line-height: calc(
-      var(--h-base-line-height) * var(--h-h4-multiplier)
-    );
+    --h4-multiplier: 1.2;
+    --h4-color: rgb(58, 58, 70);
+    --h4-font-size: calc(var(--text-base-font-size) * var(--h4-multiplier));
+    --h4-font-weight: 500;
+    --h4-line-height: calc(var(--text-base-line-height) * var(--h4-multiplier));
     /*h5*/
-    --h-h5-color: rgb(58, 58, 70);
-    --h-h5-font-size: calc(var(--h-base-font-size) * var(--h-h5-multiplier));
-    --h-h5-font-weight: 600;
-    --h-h5-line-height: calc(
-      var(--h-base-line-height) * var(--h-h5-multiplier)
-    );
+    --h5-multiplier: 0.9;
+    --h5-color: rgb(58, 58, 70);
+    --h5-font-size: calc(var(--text-base-font-size) * var(--h5-multiplier));
+    --h5-font-weight: 500;
+    --h5-line-height: calc(var(--text-base-line-height) * var(--h5-multiplier));
     /*h6*/
-    --h-h6-color: rgb(58, 58, 70);
-    --h-h6-font-size: calc(var(--h-base-font-size) * var(--h-h6-multiplier));
-    --h-h6-font-weight: 400;
-    --h-h6-line-height: calc(
-      var(--h-base-line-height) * var(--h-h6-multiplier)
+    --h6-multiplier: 0.8;
+    --h6-color: rgb(58, 58, 70);
+    --h6-font-size: calc(var(--text-base-font-size) * var(--h6-multiplier));
+    --h6-font-weight: 400;
+    --h6-line-height: calc(var(--text-base-line-height) * var(--h6-multiplier));
+
+    /* p */
+    --p-multiplier: 1;
+    --p-color: rgb(50, 50, 50);
+    --p-font-size: calc(var(--text-base-font-size) * var(--p-multiplier));
+    --p-font-weight: 400;
+    --p-line-height: calc(var(--text-base-line-height) * var(--p-multiplier));
+
+    /* span */
+    --span-multiplier: 1;
+    --span-color: rgb(50, 50, 50);
+    --span-font-size: calc(var(--text-base-font-size) * var(--span-multiplier));
+    --span-font-weight: 400;
+    --span-line-height: calc(
+      var(--text-base-line-height) * var(--span-multiplier)
+    );
+
+    /* body1 */
+    --body1-multiplier: 0.875;
+    --body1-color: rgb(60, 60, 60);
+    --body1-font-size: calc(
+      var(--text-base-font-size) * var(--body1-multiplier)
+    );
+    --body1-font-weight: 400;
+    --body1-line-height: calc(
+      var(--text-base-line-height) * var(--body1-multiplier)
+    );
+
+    /* body2 */
+    --body2-multiplier: 0.75;
+    --body2-color: rgb(60, 60, 60);
+    --body2-font-size: calc(
+      var(--text-base-font-size) * var(--body2-multiplier)
+    );
+    --body2-font-weight: 400;
+    --body2-line-height: calc(
+      var(--text-base-line-height) * var(--body2-multiplier)
+    );
+
+    /* caption */
+    --caption-multiplier: 0.65;
+    --caption-color: rgb(100, 100, 100);
+    --caption-font-size: calc(
+      var(--text-base-font-size) * var(--caption-multiplier)
+    );
+    --caption-font-weight: 400;
+    --caption-line-height: calc(
+      var(--text-base-line-height) * var(--caption-multiplier)
+    );
+
+    /* overline */
+    --overline-multiplier: 0.6;
+    --overline-color: rgb(100, 100, 100);
+    --overline-font-size: calc(
+      var(--text-base-font-size) * var(--overline-multiplier)
+    );
+    --overline-font-weight: 500;
+    --overline-line-height: calc(
+      var(--text-base-line-height) * var(--overline-multiplier)
+    );
+
+    /* label */
+    --label-multiplier: 0.75;
+    --label-color: rgb(80, 80, 80);
+    --label-font-size: calc(
+      var(--text-base-font-size) * var(--label-multiplier)
+    );
+    --label-font-weight: 500;
+    --label-line-height: calc(
+      var(--text-base-line-height) * var(--label-multiplier)
+    );
+
+    /* heading */
+    --heading-multiplier: 1.25;
+    --heading-color: rgb(40, 40, 50);
+    --heading-font-size: calc(
+      var(--text-base-font-size) * var(--heading-multiplier)
+    );
+    --heading-font-weight: 600;
+    --heading-line-height: calc(
+      var(--text-base-line-height) * var(--heading-multiplier)
+    );
+
+    /* subheading */
+    --subheading-multiplier: 1.1;
+    --subheading-color: rgb(40, 40, 50);
+    --subheading-font-size: calc(
+      var(--text-base-font-size) * var(--subheading-multiplier)
+    );
+    --subheading-font-weight: 500;
+    --subheading-line-height: calc(
+      var(--text-base-line-height) * var(--subheading-multiplier)
+    );
+
+    /* title */
+    --title-multiplier: 1.2;
+    --title-color: rgb(30, 30, 40);
+    --title-font-size: calc(
+      var(--text-base-font-size) * var(--title-multiplier)
+    );
+    --title-font-weight: 700;
+    --title-line-height: calc(
+      var(--text-base-line-height) * var(--title-multiplier)
+    );
+
+    /* subtitle1 */
+    --subtitle1-multiplier: 1;
+    --subtitle1-color: rgb(90, 90, 100);
+    --subtitle1-font-size: calc(
+      var(--text-base-font-size) * var(--subtitle1-multiplier)
+    );
+    --subtitle1-font-weight: 500;
+    --subtitle1-line-height: calc(
+      var(--text-base-line-height) * var(--subtitle1-multiplier)
+    );
+
+    /* subtitle2 */
+    --subtitle2-multiplier: 0.8;
+    --subtitle2-color: rgb(90, 90, 100);
+    --subtitle2-font-size: calc(
+      var(--text-base-font-size) * var(--subtitle2-multiplier)
+    );
+    --subtitle2-font-weight: 400;
+    --subtitle2-line-height: calc(
+      var(--text-base-line-height) * var(--subtitle2-multiplier)
     );
   }
 
   .text-h1 {
-    color: var(--h-h1-color);
-    font-size: var(--h-h1-font-size);
-    font-weight: var(--h-h1-font-weight);
-    line-height: var(--h-h1-line-height);
+    color: var(--h1-color);
+    font-size: var(--h1-font-size);
+    font-weight: var(--h1-font-weight);
+    line-height: var(--h1-line-height);
   }
   .text-h2 {
-    color: var(--h-h2-color);
-    font-size: var(--h-h2-font-size);
-    font-weight: var(--h-h2-font-weight);
-    line-height: var(--h-h2-line-height);
+    color: var(--h2-color);
+    font-size: var(--h2-font-size);
+    font-weight: var(--h2-font-weight);
+    line-height: var(--h2-line-height);
   }
   .text-h3 {
-    color: var(--h-h3-color);
-    font-size: var(--h-h3-font-size);
-    font-weight: var(--h-h3-font-weight);
-    line-height: var(--h-h3-line-height);
+    color: var(--h3-color);
+    font-size: var(--h3-font-size);
+    font-weight: var(--h3-font-weight);
+    line-height: var(--h3-line-height);
   }
   .text-h4 {
-    color: var(--h-h4-color);
-    font-size: var(--h-h4-font-size);
-    font-weight: var(--h-h4-font-weight);
-    line-height: var(--h-h4-line-height);
+    color: var(--h4-color);
+    font-size: var(--h4-font-size);
+    font-weight: var(--h4-font-weight);
+    line-height: var(--h4-line-height);
   }
   .text-h5 {
-    color: var(--h-h5-color);
-    font-size: var(--h-h5-font-size);
-    font-weight: var(--h-h5-font-weight);
-    line-height: var(--h-h5-line-height);
+    color: var(--h5-color);
+    font-size: var(--h5-font-size);
+    font-weight: var(--h5-font-weight);
+    line-height: var(--h5-line-height);
   }
   .text-h6 {
-    color: var(--h-h6-color);
-    font-size: var(--h-h6-font-size);
-    font-weight: var(--h-h6-font-weight);
-    line-height: var(--h-h6-line-height);
+    color: var(--h6-color);
+    font-size: var(--h6-font-size);
+    font-weight: var(--h6-font-weight);
+    line-height: var(--h6-line-height);
+  }
+
+  .text-p {
+    color: var(--p-color);
+    font-size: var(--p-font-size);
+    font-weight: var(--p-font-weight);
+    line-height: var(--p-line-height);
+  }
+
+  .text-span {
+    color: var(--span-color);
+    font-size: var(--span-font-size);
+    font-weight: var(--span-font-weight);
+    line-height: var(--span-line-height);
+  }
+
+  .text-title {
+    color: var(--title-color);
+    font-size: var(--title-font-size);
+    font-weight: var(--title-font-weight);
+    line-height: var(--title-line-height);
+  }
+  .text-subtitle1 {
+    color: var(--subtitle1-color);
+    font-size: var(--subtitle1-font-size);
+    font-weight: var(--subtitle1-font-weight);
+    line-height: var(--subtitle1-line-height);
+  }
+
+  .text-subtitle2 {
+    color: var(--subtitle2-color);
+    font-size: var(--subtitle2-font-size);
+    font-weight: var(--subtitle2-font-weight);
+    line-height: var(--subtitle2-line-height);
+  }
+
+  .text-body1 {
+    color: var(--body1-color);
+    font-size: var(--body1-font-size);
+    font-weight: var(--body1-font-weight);
+    line-height: var(--body1-line-height);
+  }
+
+  .text-body2 {
+    color: var(--body2-color);
+    font-size: var(--body2-font-size);
+    font-weight: var(--body2-font-weight);
+    line-height: var(--body2-line-height);
+  }
+
+  .text-caption {
+    color: var(--caption-color);
+    font-size: var(--caption-font-size);
+    font-weight: var(--caption-font-weight);
+    line-height: var(--caption-line-height);
+  }
+
+  .text-overline {
+    color: var(--overline-color);
+    font-size: var(--overline-font-size);
+    font-weight: var(--overline-font-weight);
+    line-height: var(--overline-line-height);
+  }
+
+  .text-label {
+    color: var(--label-color);
+    font-size: var(--label-font-size);
+    font-weight: var(--label-font-weight);
+    line-height: var(--label-line-height);
+  }
+
+  .text-heading {
+    color: var(--heading-color);
+    font-size: var(--heading-font-size);
+    font-weight: var(--heading-font-weight);
+    line-height: var(--heading-line-height);
+  }
+
+  .text-subheading {
+    color: var(--subheading-color);
+    font-size: var(--subheading-font-size);
+    font-weight: var(--subheading-font-weight);
+    line-height: var(--subheading-line-height);
   }
 }
