feat: remove Box component and related styles; add FloatingWhatsappButton and CategoryLoading components; enhance CSS imports and structure

--- a/src/components/DefaultTemplate/CategoriesView/base.css
+++ b/src/components/DefaultTemplate/CategoriesView/base.css
@@ -1,4 +1,11 @@
 .CategoriesView {
-  padding: 20px;
-  padding-block-end: 80px;
+  padding-block-end: 120px;
+  position: relative;
 }
+
+.CategoriesView .CategoryList {
+  padding-inline: 32px;
+}
+/* .CategoriesView:has(.MainHeader.mini) .CategoryList {
+  padding-block-start: 80px;
+} */
