--- a/src/components/DefaultTemplate/MainHeader/base.css
+++ b/src/components/DefaultTemplate/MainHeader/base.css
@@ -26,7 +26,7 @@
 .MainHeader.mini {
   padding-block: 12px;
 
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24);
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.24); */
 }
 
 .MainHeader .Header {
