--- a/src/lib/css/index.css
+++ b/src/lib/css/index.css
@@ -1,3 +1,5 @@
 @import url("./flex-utility.css");
 @import url("./dimension-utility.css");
 @import url("./text-utility.css");
+@import url("./style-utility.css");
+@import url("./number-utility.css");
