pre-commit to add tailwind

--- a/src/lib/css/flex-utility.css
+++ b/src/lib/css/flex-utility.css
@@ -8,9 +8,24 @@
   /*****************************Flex-Direction************************************************/
   .flex-direction-row {
     flex-direction: row;
+
+    &.flex-direction-reverse {
+      flex-direction: row-reverse;
+    }
   }
   .flex-direction-column {
     flex-direction: column;
+
+    &.flex-direction-reverse {
+      flex-direction: column-reverse;
+    }
+  }
+  /*****************************Flex-Wrap************************************************/
+  .flex-wrap-wrap {
+    flex-wrap: wrap;
+  }
+  .flex-wrap-nowrap {
+    flex-wrap: nowrap;
   }
   /*****************************Justify-Content************************************************/
   .justify-content-start {
@@ -48,7 +63,9 @@
   .align-items-stretch {
     align-items: stretch;
   }
-
+  .align-items-baseline {
+    align-items: baseline;
+  }
   /*****************************Gap************************************************/
   .gap-0 {
     gap: var(--px-0);
