--- a/src/components/DefaultTemplate/MainHeader/base.css
+++ b/src/components/DefaultTemplate/MainHeader/base.css
@@ -8,9 +8,9 @@
 
 .MainHeader {
   inline-size: 100%;
-  position: sticky;
+  /* position: sticky;
   top: 0px;
-  left: 0px;
+  left: 0px; */
 
   padding-block: 32px;
 
