--- a/src/lib/css/text-utility.css
+++ b/src/lib/css/text-utility.css
@@ -1,56 +1,58 @@
+@import "tailwindcss";
+
 @layer base {
   :root {
     --text-base-font-size: 1rem;
-    --text-base-line-height: 1.1rem;
+    --text-base-line-height: 1.5rem;
     --text-base-font-weight: 400;
 
     /*h1*/
     --h1-multiplier: 1.5;
-    --h1-color: rgb(58, 58, 70);
+    --h1-color: currentColor;
     --h1-font-size: calc(var(--text-base-font-size) * var(--h1-multiplier));
     --h1-font-weight: 700;
     --h1-line-height: calc(var(--text-base-line-height) * var(--h1-multiplier));
     /*h2*/
     --h2-multiplier: 1.4;
-    --h2-color: rgb(58, 58, 70);
+    --h2-color: currentColor;
     --h2-font-size: calc(var(--text-base-font-size) * var(--h2-multiplier));
     --h2-font-weight: 600;
     --h2-line-height: calc(var(--text-base-line-height) * var(--h2-multiplier));
     /*h3*/
     --h3-multiplier: 1.3;
-    --h3-color: rgb(58, 58, 70);
+    --h3-color: currentColor;
     --h3-font-size: calc(var(--text-base-font-size) * var(--h3-multiplier));
     --h3-font-weight: 500;
     --h3-line-height: calc(var(--text-base-line-height) * var(--h3-multiplier));
     /*h4*/
     --h4-multiplier: 1.2;
-    --h4-color: rgb(58, 58, 70);
+    --h4-color: currentColor;
     --h4-font-size: calc(var(--text-base-font-size) * var(--h4-multiplier));
     --h4-font-weight: 500;
     --h4-line-height: calc(var(--text-base-line-height) * var(--h4-multiplier));
     /*h5*/
     --h5-multiplier: 0.9;
-    --h5-color: rgb(58, 58, 70);
+    --h5-color: currentColor;
     --h5-font-size: calc(var(--text-base-font-size) * var(--h5-multiplier));
     --h5-font-weight: 500;
     --h5-line-height: calc(var(--text-base-line-height) * var(--h5-multiplier));
     /*h6*/
     --h6-multiplier: 0.8;
-    --h6-color: rgb(58, 58, 70);
+    --h6-color: currentColor;
     --h6-font-size: calc(var(--text-base-font-size) * var(--h6-multiplier));
     --h6-font-weight: 400;
     --h6-line-height: calc(var(--text-base-line-height) * var(--h6-multiplier));
 
     /* p */
     --p-multiplier: 1;
-    --p-color: rgb(50, 50, 50);
+    --p-color: currentColor;
     --p-font-size: calc(var(--text-base-font-size) * var(--p-multiplier));
     --p-font-weight: 400;
     --p-line-height: calc(var(--text-base-line-height) * var(--p-multiplier));
 
     /* span */
     --span-multiplier: 1;
-    --span-color: rgb(50, 50, 50);
+    --span-color: currentColor;
     --span-font-size: calc(var(--text-base-font-size) * var(--span-multiplier));
     --span-font-weight: 400;
     --span-line-height: calc(
@@ -58,19 +60,21 @@
     );
 
     /* body1 */
-    --body1-multiplier: 0.875;
-    --body1-color: rgb(60, 60, 60);
+    --body1-font-size-multiplier: 0.875;
+    --body1-line-height-multiplier: 0.875;
+
+    --body1-color: currentColor;
     --body1-font-size: calc(
-      var(--text-base-font-size) * var(--body1-multiplier)
+      var(--text-base-font-size) * var(--body1-font-size-multiplier)
     );
     --body1-font-weight: 400;
     --body1-line-height: calc(
-      var(--text-base-line-height) * var(--body1-multiplier)
+      var(--text-base-line-height) * var(--body1-line-height-multiplier)
     );
 
     /* body2 */
     --body2-multiplier: 0.75;
-    --body2-color: rgb(60, 60, 60);
+    --body2-color: currentColor;
     --body2-font-size: calc(
       var(--text-base-font-size) * var(--body2-multiplier)
     );
@@ -81,7 +85,7 @@
 
     /* caption */
     --caption-multiplier: 0.7;
-    --caption-color: rgb(100, 100, 100);
+    --caption-color: currentColor;
     --caption-font-size: calc(
       var(--text-base-font-size) * var(--caption-multiplier)
     );
@@ -92,7 +96,7 @@
 
     /* overline */
     --overline-multiplier: 0.6;
-    --overline-color: rgb(100, 100, 100);
+    --overline-color: currentColor;
     --overline-font-size: calc(
       var(--text-base-font-size) * var(--overline-multiplier)
     );
@@ -103,7 +107,7 @@
 
     /* label */
     --label-multiplier: 0.75;
-    --label-color: rgb(80, 80, 80);
+    --label-color: currentColor;
     --label-font-size: calc(
       var(--text-base-font-size) * var(--label-multiplier)
     );
@@ -114,7 +118,7 @@
 
     /* heading */
     --heading-multiplier: 1.25;
-    --heading-color: rgb(40, 40, 50);
+    --heading-color: currentColor;
     --heading-font-size: calc(
       var(--text-base-font-size) * var(--heading-multiplier)
     );
@@ -125,7 +129,7 @@
 
     /* subheading */
     --subheading-multiplier: 1.1;
-    --subheading-color: rgb(40, 40, 50);
+    --subheading-color: currentColor;
     --subheading-font-size: calc(
       var(--text-base-font-size) * var(--subheading-multiplier)
     );
@@ -136,7 +140,7 @@
 
     /* title */
     --title-multiplier: 1.2;
-    --title-color: rgb(30, 30, 40);
+    --title-color: currentColor;
     --title-font-size: calc(
       var(--text-base-font-size) * var(--title-multiplier)
     );
@@ -147,7 +151,7 @@
 
     /* subtitle1 */
     --subtitle1-multiplier: 1;
-    --subtitle1-color: rgb(90, 90, 100);
+    --subtitle1-color: currentColor;
     --subtitle1-font-size: calc(
       var(--text-base-font-size) * var(--subtitle1-multiplier)
     );
@@ -158,7 +162,7 @@
 
     /* subtitle2 */
     --subtitle2-multiplier: 0.8;
-    --subtitle2-color: rgb(90, 90, 100);
+    --subtitle2-color: currentColor;
     --subtitle2-font-size: calc(
       var(--text-base-font-size) * var(--subtitle2-multiplier)
     );
@@ -168,12 +172,15 @@
     );
 
     /* hero */
-    --hero-multiplier: 3;
-    --hero-color: rgb(39, 39, 43);
-    --hero-font-size: calc(var(--text-base-font-size) * var(--hero-multiplier));
+    --hero-font-size-multiplier: 3;
+    --hero-line-height-multiplier: 2.5;
+    --hero-color: currentColor;
+    --hero-font-size: calc(
+      var(--text-base-font-size) * var(--hero-font-size-multiplier)
+    );
     --hero-font-weight: 600;
     --hero-line-height: calc(
-      var(--text-base-line-height) * var(--hero-multiplier)
+      var(--text-base-line-height) * var(--hero-line-height-multiplier)
     );
   }
 
@@ -252,10 +259,35 @@
   }
 
   .tv-body1 {
-    color: var(--body1-color);
-    font-size: var(--body1-font-size);
-    font-weight: var(--body1-font-weight);
-    line-height: var(--body1-line-height);
+    /*Change the values of the multiplier of the font sizes and line height*/
+    @apply [--body1-font-size-multiplier:1] [--body1-line-height-multiplier:1] lg:[--body1-font-size-multiplier:1] lg:[--body1-line-height-multiplier:1];
+    /*Calc again the values of the font size and line height this is necessary to trigger the change in the multiplier*/
+    @apply [--body1-font-size:calc(var(--text-base-font-size)*var(--body1-font-size-multiplier))] [--body1-line-height:calc(var(--text-base-line-height)*var(--body1-line-height-multiplier))];
+    /*Applying the calculate values to the style*/
+    @apply text-(--body1-color) text-(length:--body1-font-size) leading-(--body1-line-height) font-(--body1-font-weight);
+
+    &.primary {
+      @apply [--body1-color:var(--color-primary)];
+    }
+    &.primary-container {
+      @apply [--body1-color:var(--color-primary-container)];
+    }
+    &.error {
+      @apply [--body1-color:var(--color-error)];
+    }
+    &.error-container {
+      @apply [--body1-color:var(--color-error-container)];
+    }
+
+    &.small {
+      @apply [--body1-font-size-multiplier:0.88] [--body1-line-height-multiplier:1] lg:[--body1-font-size-multiplier:0.88] lg:[--body1-line-height-multiplier:1];
+    }
+    &.medium {
+      @apply [--body1-font-size-multiplier:1] [--body1-line-height-multiplier:1] lg:[--body1-font-size-multiplier:1] lg:[--body1-line-height-multiplier:1];
+    }
+    &.high {
+      @apply [--body1-font-size-multiplier:1.13] [--body1-line-height-multiplier:1.2] lg:[--body1-font-size-multiplier:1.13] lg:[--body1-line-height-multiplier:1.2];
+    }
   }
 
   .tv-body2 {
@@ -300,24 +332,41 @@
     line-height: var(--subheading-line-height);
   }
 
-  /*****************************App Specific*************************************/
+  /*****************************Dashboard Specific*************************************/
 
   /*****************************Web Specifics*************************************/
   .tv-hero {
-    color: var(--hero-color);
-    font-size: var(--hero-font-size);
-    font-weight: var(--hero-font-weight);
-    line-height: var(--hero-line-height);
-  }
+    /*Change the values of the multiplier of the font sizes and line height*/
+    @apply [--hero-font-size-multiplier:2] [--hero-line-height-multiplier:1.5] lg:[--hero-font-size-multiplier:3] lg:[--hero-line-height-multiplier:2.2];
+    /*Calc again the values of the font size and line height this is necessary to trigger the change in the multiplier*/
+    @apply [--hero-font-size:calc(var(--text-base-font-size)*var(--hero-font-size-multiplier))] [--hero-line-height:calc(var(--text-base-line-height)*var(--hero-line-height-multiplier))];
+    /*Applying the calculate values to the style*/
+    @apply text-(--hero-color) text-(length:--hero-font-size) leading-(--hero-line-height) font-(--hero-font-weight);
 
-  /***********************************Text-Align*****************************************/
-  .text-align-start {
-    text-align: start;
-  }
-  .text-align-center {
-    text-align: center;
-  }
-  .text-align-end {
-    text-align: end;
+    &.primary {
+      @apply [--hero-color:var(--color-primary)];
+    }
+    &.on-primary {
+      @apply [--hero-color:var(--color-on-primary)];
+    }
+    &.primary-container {
+      @apply [--hero-color:var(--color-primary-container)];
+    }
+    &.error {
+      @apply [--hero-color:var(--color-error)];
+    }
+    &.error-container {
+      @apply [--hero-color:var(--color-error-container)];
+    }
+
+    &.small {
+      @apply [--hero-font-size-multiplier:1.5] [--hero-line-height-multiplier:1.3] lg:[--hero-font-size-multiplier:2.5] lg:[--hero-line-height-multiplier:2];
+    }
+    &.medium {
+      @apply [--hero-font-size-multiplier:2] [--hero-line-height-multiplier:1.5] lg:[--hero-font-size-multiplier:3] lg:[--hero-line-height-multiplier:2.4];
+    }
+    &.high {
+      @apply [--hero-font-size-multiplier:2.5] [--hero-line-height-multiplier:2] lg:[--hero-font-size-multiplier:4] lg:[--hero-line-height-multiplier:3.2];
+    }
   }
 }
