--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.yl-ripple {
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.427);
+  transform: scale(0);
+  position: absolute;
+  opacity: 1;
+}
+
+.yl-ripple-animation {
+  animation: yl-ripple 0.6s linear;
+}
+@keyframes yl-ripple {
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
