--- a/src/lib/css/index.css
+++ b/src/lib/css/index.css
@@ -2,3 +2,12 @@
 @import url("./text-utility.css");
 @import url("./style-utility.css");
 @import url("./number-utility.css");
+
+@keyframes skeleton-animation {
+  0% {
+    background-position: -200px 0;
+  }
+  100% {
+    background-position: calc(200px + 100%) 0;
+  }
+}
